1.7.3
 - build: move windows pipeline to GH Actions
1.7.2
 - build: use oldest-supported-numpy in pyproject.toml
1.7.1
 - build: migrate to GitHub Actions
1.7.0
 - enh: simplified writing new model functions by introducing default
   modeling and residual wrappers
 - ref: improve code readability
1.6.3
 - tests: fix fails due to tifffile upgrade
 - setup: lift historic pinning of lmfit==0.9.5
1.6.2
 - tests: improve coverage
 - enh: add sanity checks for models during registration (#5)
1.6.1
 - enh: if the contact point estimate is not possible, use a fit
   with a partially constant and linear function
1.6.0
 - enh: improve contact point estimation by computing the gradient
   first; resolves issues with tilted baselines (#6)
   (This may affect fitting results slightly, hence the new minor
   release)
1.5.5
 - setup: make tkinter optional for frozen applications
1.5.4
 - setup: bump scikit-learn from 0.18.0 to 0.23.0 (different
   model results due to bugfixes, enhancements, or random
   sampling procedures; the tests have been updated accordingly)
 - setup: bump afmformats from 0.10.0 to 0.10.2
1.5.3
 - setup: new builds for Python 3.8
1.5.2
 - enh: be more verbose when tip position cannot be computed
 - setup: bump afmformats from 0.7.0 to 0.10.0
1.5.1
 - setup: bump afmformats from 0.6.0 to 0.7.0 (metadata fixes)
1.5.0
 - feat: IndentationGroup.get_enum returns a curve from an enum value
 - setup: bump afmformats from 0.5.0 to 0.6.0 (hdf5 export, improved tab
   export)
1.4.1
 - enh: set parameter `baseline` to "vary" for all models
 - fix: make sure that `model_key` is set before `params_initial`
   when fitting with kwargs (otherwise, `params_initial` might reset)
1.4.0
 - feat: add function `Indentation.get_rating_parameters`
 - feat: compute additional ancillary parameter "Maximum indentation"
 - feat: new functions `model.get_parm_unit` and updated
   `model.get_parm_name` to work with ancillary parameters as well
1.3.0