@@ -1,5 +1,6 @@
 1.7.3
  - build: move windows pipeline to GH Actions
+ - ref: better warning traceback for deprecated weight_cp method
 1.7.2
  - build: use oldest-supported-numpy in pyproject.toml
 1.7.1
